Update Hero img stretch bug for Safari

--- a/css/hero.css
+++ b/css/hero.css
@@ -7,17 +7,17 @@
     white-space: nowrap;
 }
 
-#hero figure {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+#hero .container {
+    margin: 0 auto 1em auto;
+    width: 75%;
 }
 
 #hero .picture {
-    align-self: center;
-    margin-bottom: 1em;
     border: 1em solid black;
     border-radius: 50%;
-    height: 75%;
-    width: 75%;
+    width: 100%;
+}
+
+#hero .caption {
+    text-align: center;
 }
